- in  the minibuffer,  using  =M-backspace= to  delete  a word  didn't
  respect whitespaces. It is fixed.
- its behaviour was  also too different than other  common tools, like
  Firefox.  Now:
  - it deletes the trailing word delimiter
  - it removes all trailing delimiters PLUS one word.
*** Add more keys
- Key pad keys were added.
  The PyQt port requires an update.
** DONE 1.3.0
*** DONE PyQt/Webengine platform port
QtWebengine is based off Blink (the renderer of Chrome).
A PyQt platform port would have the benefits of being cross-platform while
offering an alternative web renderer.

Because of WKWebKit library limitations, the cocoa-webkit platform port misses
some features such as proxy support, per-buffer cookie file, network resource
interception.  To address these limitations, the PyQt platform port could become
the default for macOS.
*** DONE VI bindings
*** DONE Ad-blocking support
Only host-based for now and uses Easylist by default.
*** DONE Fix search implementation
It now displays search hints properly and search within iframes too.
*** DONE Add initial download support
*** DONE Support multiple modes per buffer
*** DONE Add proxy-mode
This makes it possible to use Next over Tor among others.
*** DONE Add noscript-mode to disable JavaScript
*** DONE Use D-Bus for inter-process communication
This increases security and should also improve performance, notably on *BSD systems.
*** DONE Remove ~define-parenstatic~ macro
~define-parenscript~ supersedes it.
*** DONE Smarter start up logic
Next will try harder to "do the right thing" when starting.
A simple ~(next:start)~ from the REPL should be enough in most cases.
*** DONE Improve minibuffer fuzzy-matching to support permutations and typos
*** DONE Extended bindings
- C-w copies any candidate
- TAB inserts the candidate in the minibuffer.
- C-v and M-v scroll pages up and down.
- C-x C-k deletes the current buffer.
- C-left, C-right, C-Page_Up and C-Page_Down go to previous/next buffer.