@@ -74,6 +74,9 @@ the previous last created buffer, as expected.
 *** Add more keys
 - Key pad keys were added.
   The PyQt port requires an update.
+*** Next is back to the Guix official channel
+The Next Guix channel can be safely removed from your
+=~/.config/guix/channels.scm= before running a =guix pull=.
 ** DONE 1.3.0
 *** DONE PyQt/Webengine platform port
 QtWebengine is based off Blink (the renderer of Chrome).
